force-app/main/default/objects/FS_HistorialCampos__c/FS_HistorialCampos__c.object-meta.xml
<CustomObject>
    <label>Historial de Caso</label>
    <nameField>
        <displayFormat>HC-{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historial de Casos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>