force-app/main/default/objects/FS_HistorialCampos__c/fields/FS_FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaCreacion__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creación</label>
    <type>DateTime</type>
</CustomField>