force-app/main/default/objects/FS_HistorialCampos__c/fields/FS_NombreApiCampo__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreApiCampo__c</fullName>
    <label>Nombre Api del Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>