force-app/main/default/objects/FS_HistorialCampos__c/fields/FS_NombreCampo__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreCampo__c</fullName>
    <label>Nombre del Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>