force-app/main/default/objects/FS_HistorialCampos__c/fields/FS_ValorNuevo__c.field-meta.xml
<CustomField>
    <fullName>FS_ValorNuevo__c</fullName>
    <label>Valor Nuevo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>