force-app/main/default/objects/FS_HistorialCampos__c/fields/FS_ValorOriginal__c.field-meta.xml
<CustomField>
    <fullName>FS_ValorOriginal__c</fullName>
    <label>Valor Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>